--- a/TimeSet_andorid/app/src/main/res/layout/in_album.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/in_album.xml
@@ -87,12 +87,51 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </LinearLayout>
+<FrameLayout android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="8">
     <FrameLayout
         android:id="@+id/tab_content"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="8"
+       android:layout_height="match_parent"
         >
     </FrameLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+        <LinearLayout android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+
+            >
+
+        <LinearLayout android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="10">
+        </LinearLayout>
+            <LinearLayout android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="horizontal"
+                android:gravity="right"
+                android:layout_weight="2">
+                <ImageButton
+                    android:layout_marginRight="20dp"
+                    android:id="@+id/add_img"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/add2" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+    </FrameLayout>
+
+
+
+
+</FrameLayout>
+
 </LinearLayout>
 
