--- a/TimeSet_andorid/app/src/main/res/layout/in_album_list_item.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/in_album_list_item.xml
@@ -8,37 +8,21 @@
         android:id="@+id/up_time_day"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
         android:text="2016/06/07"
         android:textSize="16dp" />
 
-    <GridView
+    <com.example.lt.timeset_andorid.BigTwo.TimePhoto.NoScrollGridView
         android:id="@+id/in_album_list_item_img"
         android:layout_width="match_parent"
+        android:layout_margin="15dp"
         android:layout_height="wrap_content"
-        android:cacheColorHint="#00000000"
-        android:drawSelectorOnTop="false"
-        android:fadeScrollbars="true"
-        android:fadingEdge="none"
-        android:fadingEdgeLength="10dip"
-        android:fastScrollEnabled="true"
-        android:horizontalSpacing="10dp"
-        android:listSelector="#00000000"
         android:numColumns="3"
-        android:scrollbars="none"
-        android:stackFromBottom="true"
-        android:stretchMode="columnWidth"
-        android:transcriptMode="alwaysScroll"
-        android:verticalSpacing="10dp" />
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="10dp" />
 
 
-    <TextView
-        android:id="@+id/in_album_list_item_more_img"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="30dp"
-        android:gravity="right"
-        android:text="查看更多"
-        android:textColor="#0033FF"
-        android:textSize="14dp" />
+
 
 </LinearLayout>
