--- a/TimeSet_andorid/app/src/main/res/layout/activity_main.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context=".MainActivity">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
