--- a/TimeSet_andorid/app/src/main/res/layout/list_gride.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/list_gride.xml
@@ -6,33 +6,31 @@
     android:background="#ffffff">
 
     <ImageView
+        android:scaleType="fitXY"
         android:id="@+id/image"
         android:src="@drawable/meishi"
         android:layout_width="match_parent"
         android:layout_height="250dp"/>
-        <TextView
+    <LinearLayout
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="30dp">
+        <EditText
+            android:background="@null"
             android:textSize="23dp"
             android:layout_marginTop="5dp"
             android:id="@+id/text"
             android:text="111"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    <LinearLayout
-        android:background="#EBEBEB"
-        android:id="@+id/album_select"
-        android:visibility="gone"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="30dp">
-        <ImageView
-            android:id="@+id/bianji"
-            android:src="@drawable/bianji"
-            android:layout_width="10dp"
-            android:layout_height="match_parent"/>
+            android:layout_width="0dp"
+            android:layout_weight="5"
+            android:layout_height="match_parent" />
+
         <ImageView
             android:id="@+id/shanchu"
             android:src="@drawable/shanchu"
-            android:layout_width="10dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="match_parent"/>
     </LinearLayout>
 </LinearLayout>
