--- a/TimeSet_andorid/app/src/main/res/layout/activity_modify_password_by_phone.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/activity_modify_password_by_phone.xml
@@ -46,47 +46,11 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="200dp"
             android:background="@drawable/rounded_background"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="@dimen/dp10">
-
-            <!--手机号-->
-            <LinearLayout
-                android:id="@+id/input_layout_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/phone" />
-
-                <EditText
-                    android:id="@+id/modify_et_phone2phone"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dip"
-                    android:layout_weight="1"
-                    android:background="#00000000"
-                    android:hint="手机号"
-                    android:inputType="number"
-                    android:padding="5dip"
-                    android:textSize="16sp" />
-
-                <ImageView
-                    android:id="@+id/modify_iv_phone2phone"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_weight="0.15"
-                    android:background="@drawable/error"
-                    android:onClick="passwordPhoneClear" />
-            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
@@ -125,6 +89,7 @@
                     android:layout_height="40dp"
                     android:layout_weight="0.38"
                     android:background="@drawable/button_radius"
+                    android:onClick="phonePasswordClick"
                     android:text="获取验证码"
                     android:textColor="#7adfb8" />
             </LinearLayout>
