--- a/TimeSet_andorid/app/src/main/res/layout/in_album_list_item_gridview_item.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/in_album_list_item_gridview_item.xml
@@ -5,12 +5,11 @@
 
     <ImageView
         android:id="@+id/grid_view_img"
-        android:layout_width="0dp"
-        android:layout_height="107dp"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:layout_centerInParent="true"
         android:layout_weight="1"
-        android:scaleType="centerCrop"
-        android:src="@drawable/b" />
+        android:scaleType="centerCrop"/>
 
 
 </LinearLayout>
