--- a/TimeSet_andorid/app/src/main/res/layout/activity_main.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical|center_horizontal"
-                android:text="设置"
+                android:text=""
                 android:textColor="#ffffff"
                 android:textSize="20dp" />
         </LinearLayout>
