--- a/TimeSet_andorid/app/src/main/res/layout/activity_main.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,8 @@
             <ImageView
                 android:id="@+id/img"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="56dp"
+                android:layout_marginTop="5dp"
                 android:layout_weight="1"
                 android:src="@drawable/touxiang" />
 
