--- a/TimeSet_andorid/app/src/main/res/layout/in_album.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/in_album.xml
@@ -7,17 +7,17 @@
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="50dp"
         android:paddingBottom="2dp"
+        android:background="#7adfb8"
         android:orientation="horizontal">
 
         <ImageButton
+            style="?android:attr/borderlessButtonStyle"
             android:id="@+id/btn_return1"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="38dp"
-            android:background="#fff"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/return4"
-            />
+            android:background="@drawable/fanhui32" />
         <TextView
             android:id="@+id/album_name"
             android:layout_height="wrap_content"
@@ -25,19 +25,18 @@
             android:gravity="center"
             android:layout_weight="9"
             android:text="XXX相册"
-            android:textSize="18dp"
-            android:textColor="#000"
-            android:layout_gravity="center"
-            />
+            android:textSize="20dp"
+            android:textColor="@color/FloralWhite"
+            android:layout_gravity="center" />
         <ImageButton
+            style="?android:attr/borderlessButtonStyle"
             android:layout_gravity="center_vertical"
             android:id="@+id/btn_search"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="38dp"
-            android:background="#fff"
-
-            android:src="@drawable/search"
+            android:layout_height="35dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/sousou"
 
             />
     </LinearLayout>
@@ -46,7 +45,7 @@
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="1.5"
         android:orientation="horizontal">
         <LinearLayout
             android:id="@+id/tab_spec_1"
@@ -58,12 +57,13 @@
             <ImageView
                 android:id="@+id/img_1"
                 android:layout_marginBottom="2dp"
-                android:background="@drawable/calendar"
-                android:layout_width="60dp"
-                android:layout_height="40dp" />
+                android:background="@drawable/xiang"
+                android:layout_width="65dp"
+                android:layout_height="60dp" />
             <TextView
                 android:id="@+id/tv_1"
                 android:text="时间相册"
+                android:textSize="17dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
@@ -76,13 +76,14 @@
             android:layout_height="match_parent">
             <ImageView
                 android:id="@+id/img_2"
-                android:background="@drawable/map0"
+                android:background="@drawable/qiu"
                 android:layout_marginBottom="2dp"
-                android:layout_width="60dp"
-                android:layout_height="40dp" />
+                android:layout_width="50dp"
+                android:layout_height="60dp" />
             <TextView
                 android:id="@+id/tv_2"
                 android:text="足迹地球"
+                android:textSize="17dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
@@ -114,13 +115,13 @@
                 android:layout_height="0dp"
                 android:orientation="horizontal"
                 android:gravity="right"
-                android:layout_weight="2">
+                android:layout_weight="1.7">
                 <ImageButton
                     android:layout_marginRight="20dp"
                     android:id="@+id/add_img"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:background="@drawable/add2" />
+                    android:background="@drawable/jiaohao" />
             </LinearLayout>
 
 
