--- a/TimeSet_andorid/app/src/main/res/layout/in_album_add_img.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/in_album_add_img.xml
@@ -1,74 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <LinearLayout android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:paddingBottom="2dp"
-        android:orientation="horizontal">
-        <LinearLayout android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="40dp"
-            android:layout_gravity="center_vertical"
-            >
-            <ImageButton
-                android:id="@+id/btn_return11"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/return32"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="#fff">
 
-                />
-        </LinearLayout>
+        <ImageView
+            android:id="@+id/iv_add_picture_back"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="@dimen/dp10"
+            android:layout_marginBottom="@dimen/dp10"
+            android:src="@drawable/ic_back_arrow" />
 
         <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
             android:layout_weight="8"
+            android:gravity="center"
             android:text="添加照片"
-            android:textSize="20dp"
             android:textColor="#000"
-            android:layout_gravity="center"
-            />
-        <LinearLayout android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="40dp"
-          android:layout_gravity="center_vertical"
-            >
-            <TextView
-                android:id="@+id/add_img_in_album"
-                android:layout_width="50dp"
-                android:textSize="20dp"
-                android:layout_height="27dp"
-                android:textColor="#3366CC"
-                android:text="确定"
-                android:layout_gravity="center"
-                />
-        </LinearLayout>
-    </LinearLayout>
-    <TextView android:layout_height="wrap_content"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tv_add_picture_upload"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            android:layout_marginRight="@dimen/dp10"
+            android:text="上传"
+            android:textColor="#FFA000"
+            android:textSize="18sp" />
+
+    </RelativeLayout>
+
+
+    <TextView
         android:layout_width="match_parent"
-        android:lines="1"
-        android:textSize="5dp"
-        android:text="————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————————----"
-        />
-    <EditText android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:id="@+id/bei_zhu"
-        android:hint="为照片添加备注信息"
-        android:padding="10dp"
-        android:layout_margin="5dp"
-        />
-    <GridView android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:numColumns="4"
-        android:id="@+id/add_img_gridView"
-        />
+        android:layout_height="0.5dp"
+        android:layout_marginTop="40dp"
+        android:background="#000" />
+
+    <EditText
+        android:id="@+id/et_add_picture_content"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginTop="40.5dp"
+        android:background="#FFFFFF"
+        android:gravity="start"
+        android:hint="说点什么吧..."
+        android:maxEms="128"
+        android:textSize="15sp"
+        android:paddingLeft="@dimen/dp10" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_below="@id/et_add_picture_content"
+        android:background="#EBEBEB" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recy_add_picture"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="140dp"
+        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+        app:spanCount="3">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 
-
-</LinearLayout>
+</RelativeLayout>
 
