--- a/TimeSet_andorid/app/src/main/res/layout/in_album.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/in_album.xml
@@ -5,7 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="50dp"
-
+        android:background="#7adfb8"
         android:orientation="horizontal">
         <LinearLayout android:layout_width="0dp"
             android:layout_weight="1"
@@ -13,12 +13,12 @@
             android:layout_gravity="center_vertical"
             >
             <ImageButton
+                style="?android:attr/borderlessButtonStyle"
                 android:id="@+id/btn_return1"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center_vertical"
-                android:background="@drawable/return32"
-
+                android:background="@drawable/fanhui32"
                 />
         </LinearLayout>
 
@@ -29,19 +29,20 @@
             android:layout_weight="8"
             android:id="@+id/album_name"
             android:textSize="20dp"
-            android:textColor="#000"
+            android:textColor="#fff"
             android:layout_gravity="center"
             />
         <LinearLayout android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:layout_height="40dp"
             android:layout_gravity="center_vertical"
             >
             <TextView
                 android:id="@+id/btn_search"
                 android:layout_width="35dp"
-                android:layout_height="35dp"
-               android:background="@drawable/search"
+                android:layout_height="30dp"
+                android:layout_marginRight="5dp"
+               android:background="@drawable/sousou"
                 android:layout_gravity="center"
                 />
         </LinearLayout>
@@ -92,7 +93,7 @@
                 android:id="@+id/img_2"
                 android:background="@drawable/qiu"
                 android:layout_marginBottom="2dp"
-                android:layout_width="50dp"
+                android:layout_width="60dp"
                 android:layout_height="60dp" />
             <TextView
                 android:id="@+id/tv_2"
@@ -133,8 +134,8 @@
                 <ImageButton
                     android:layout_marginRight="20dp"
                     android:id="@+id/add_img"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
                     android:background="@drawable/jiaohao" />
             </LinearLayout>
 
