--- a/TimeSet_andorid/app/src/main/res/layout/in_album_calendar.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/in_album_calendar.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-   <ListView android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/in_album_list_items"/>
+    <ListView
+        android:id="@+id/in_album_list_items"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <indi.liyi.viewer.ImageViewer
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/iver_img_show"
+        android:visibility="gone"/>
 </LinearLayout>
