--- a/TimeSet_andorid/app/src/main/res/layout/activity_search.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/activity_search.xml
@@ -5,19 +5,48 @@
     android:orientation="vertical"
     android:padding="10dp">
 
-    <LinearLayout
+   <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+       >-->
 
-        <EditText
-            android:id="@+id/et_search"
-            android:layout_width="0dp"
-            android:layout_height="45dp"
-            android:layout_weight="9"
-            android:hint="地点/内容/描述"/>
+        <LinearLayout
+           android:layout_width="320dp"
+           android:layout_height="0dp"
+           android:layout_gravity="center"
+           android:layout_weight="1"
+            android:background="@drawable/button_edge"
+           android:gravity="center"
+           android:orientation="horizontal">
+           <EditText
+               android:id="@+id/et_search"
+               android:layout_width="wrap_content"
+               android:layout_height="match_parent"
+               android:background="@null"
+               android:gravity="center"
+               android:hint="地点/内容/描述"
+               android:paddingRight="10dp"
+               android:textColorHint="#8C8C8C"
+               android:textCursorDrawable="@null"
+               android:textSize="14sp" />
 
-        <TextView
+            <ImageView
+                android:id="@+id/tv_search"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:padding="10dp"
+                android:src="@drawable/sousuo" />
+            <!-- </LinearLayout>-->
+
+        <!-- <EditText
+             android:id="@+id/et_search"
+             android:layout_width="0dp"
+             android:layout_height="45dp"
+             android:layout_weight="9"
+             android:hint="地点/内容/描述"/>
+ -->
+       <!-- <TextView
             android:id="@+id/tv_search"
             android:layout_width="0dp"
             android:layout_height="40dp"
@@ -26,7 +55,7 @@
             android:gravity="center"
             android:textSize="16dp"
             android:textColor="#fff"
-            android:background="@drawable/shape_round_button"/>
+            android:background="@drawable/shape_round_button"/>-->
     </LinearLayout>
     <LinearLayout
         android:id="@+id/ll_no_search"
@@ -47,7 +76,8 @@
     </LinearLayout>
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="15"
         android:id="@+id/lv_search">
 
     </ListView>
