--- a/TimeSet_andorid/app/src/main/res/layout/list_gride.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/list_gride.xml
@@ -23,8 +23,14 @@
             android:id="@+id/text"
             android:text="111"
             android:layout_width="0dp"
-            android:layout_weight="5"
+            android:layout_weight="4"
             android:layout_height="match_parent" />
+        <ImageView
+            android:id="@+id/tianpian"
+            android:src="@drawable/tianpian"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="25dp"/>
 
         <ImageView
             android:id="@+id/shanchu"
