--- a/TimeSet_andorid/app/src/main/res/layout/in_album_map.xml
+++ b/TimeSet_andorid/app/src/main/res/layout/in_album_map.xml
@@ -2,14 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-   <ListView android:layout_width="match_parent"
+   <!--<ListView android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/in_album_list_items"/>
     <TextView android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:text="没有数据了---ditu"
+        android:text="没有数据了-&#45;&#45;ditu"
         android:gravity="center"
-        android:textSize="18dp"/>
-
+        android:textSize="18dp"/>-->
+    <com.baidu.mapapi.map.MapView
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"/>
 
 </LinearLayout>
