--- a/TimeSet_andorid/app/src/main/res/values/dimens.xml
+++ b/TimeSet_andorid/app/src/main/res/values/dimens.xml
@@ -8,4 +8,8 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="dp10">10dp</dimen>
+
+    <dimen name="image_count_100">5sp</dimen>
+    <dimen name="image_count_10">6sp</dimen>
+    <dimen name="image_count_1">7sp</dimen>
 </resources>
